--- a/views/default.pug
+++ b/views/default.pug
@@ -1,9 +1,12 @@
 doctype html
-html
+html(lang="fr")
   head
     title Benjamin Catouillard - #{title}
     link(rel='stylesheet', href='/css/style.css')
-    meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
+    meta(name="Content-Type" content="text/html; charset=utf-8")
+    meta(name="description" content=description)
+    meta(name="robots" content="INDEX,FOLLOW")
   body
     main
       block header
