feat(default): Navbar + Footer -Add navbar -Add footer -Add all of the templates -Add robots.txt -Add sitemap.xml -Add routes -Add fontawesome icons

--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -3,3 +3,8 @@
 $color-main: #262626;
 $color-header: #12161a;
 $color-white: #dadada;
+$color-selected: #ffe49c;
+$color-hover: #38a2b7;
+
+$desktop: 1000px;
+$mobile: 999px;
