--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,6 +1,24 @@
+@import "../../node_modules/bulma/bulma.sass";
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "variables";
 
-.header{
-    background-color: $color-header;
-    color: $color-white;
+@import "navbar";
+@import "footer";
+@import "content";
+
+html{
+    background-color: $color-main;
+    overflow-y: unset;
+
+    body{
+        display: flex;
+        flex-direction: column;
+        min-height: 99.4vh;
+    }
+}
+
+@media (max-width: $mobile){
+    .only-desk{
+        display: none;
+    }
 }
