feat(index): Add About me

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,27 @@ extends default
 
 block content
   section.section
+    section.hero
+      div.hero-body
+        div.container
+          h1.title Benjamin Catouillard
+          h2.subtitle Développeur Web
     div.container
+      div.about
+        div.texte
+          p Je suis 
+            strong Benjamin Catouillard
+            |, j'ai 21 ans et je suis étudiant dans le domaine du développement web. 
+            | Je suis 
+            strong diplômé 
+            | du lycée Guy Mollet en services informatiques aux organisaations et actuellement en troisième année de Bachelor Responsable de projets informatiques.
+            strong Passionné par le développement web
+            | , je suis actuellement en alternance chez Boulanger en tant que développeur web.
+            br
+            br
+            | Étant 
+            strong persévérant,curieux,
+            | j'ai toujours envie d'apprendre et je ne m'arrête pas au premier problème.
+
+        div.image
+          img(src="../images/benjamin.jpg" alt="Benjamin Catouillard")
