--- a/public/sass/_content.scss
+++ b/public/sass/_content.scss
@@ -1,3 +1,23 @@
 .section{
     flex: 1;
+
+    .container{
+        .about{
+            display: flex;
+            flex-flow: row wrap;
+            justify-items: center;
+            align-items: center;
+            margin: 0 auto;
+
+            .texte{
+                width: 48%;
+                margin: 50px;
+                color: $color-white;
+
+                strong{
+                    color: $color-white;
+                }
+            }
+        }
+    }
 }
