--- a/public/sass/_footer.scss
+++ b/public/sass/_footer.scss
@@ -2,6 +2,8 @@
     background-color: $color-header;
     padding: 1rem 1.5rem 0.5rem;
     color: $color-white;
+    margin: 0 auto;
+    width: 100%;
 
     &__container__content{
         flex-flow: row wrap;
