--- a/views/default.pug
+++ b/views/default.pug
@@ -6,7 +6,7 @@ html(lang="fr")
       link(rel='stylesheet', href='/css/style.css')
     meta(name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
     meta(name="Content-Type" content="text/html; charset=utf-8")
-    meta(name="description" content=`#{description}`)
+    meta(name="description" content=description)
     meta(name="robots" content="INDEX,FOLLOW")
   body
     nav.navbar.is-transparent.is-fixed-top(role="navigation" aria-label="main navigation")
@@ -34,20 +34,20 @@ html(lang="fr")
 
     block content
 
-    block footer
-      footer.footer
-        div.container
-          div.footer__container__content.columns.is-mobile
-            div.column.has-text-centered
-              a(href="https://www.linkedin.com/bcatouillard/" target="_blank")
-                span.icon.fa-2x
-                  i.fab.fa-linkedin-in.is-large(aria-hidden="true")
-            div.column.has-text-centered.only-desk
-              p Tous droits réservés - Benjamin Catouillard
-            div.column.has-text-centered
-              a(href="https://www.github.com/bcatouillard" target="_blank")
-                span.icon.fa-2x
-                  i.fab.fa-github.is-large(aria-hidden="true")
+    
+    footer.footer
+      div.container
+        div.footer__container__content.columns.is-mobile
+          div.column.has-text-centered
+            a(href="https://www.linkedin.com/in/bcatouillard/" target="_blank")
+              span.icon.fa-2x
+                i.fab.fa-linkedin-in.is-large(aria-hidden="true")
+          div.column.has-text-centered.only-desk
+            p Tous droits réservés - Benjamin Catouillard
+          div.column.has-text-centered
+            a(href="https://www.github.com/bcatouillard" target="_blank")
+              span.icon.fa-2x
+                i.fab.fa-github.is-large(aria-hidden="true")
 
     script(src="js/navbar.js")
     script(defer src="assets/@fortawesome/fontawesome-free/js/all.min.js")
