--- a/views/default.pug
+++ b/views/default.pug
@@ -7,7 +7,7 @@ html(lang="fr")
     meta(name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
     meta(name="Content-Type" content="text/html; charset=utf-8")
     meta(name="description" content=description)
-    meta(name="robots" content="INDEX,FOLLOW")
+    meta(name="robots" content="NOINDEX,NOFOLLOW")
   body
     nav.navbar.is-transparent.is-fixed-top(role="navigation" aria-label="main navigation")
       div.navbar-brand
