--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,8 @@
 extends default
 
 block content
-  section.section
+  section.section.hero
+    div.hero-body
+      div.container
+        h1.title#heroTitle 
+        h2.subtitle#heroSubtitle 
