--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -3,3 +3,25 @@ section.section.hero
     div.container
       h1.title#heroTitle 
       h2.subtitle#heroSubtitle 
+
+
+section.section.about__root
+  div.container.about__container
+    h2.title.is-3 A propos de moi 
+    div.columns.about__columns
+      div.column
+        p.about__text Je suis 
+          strong Benjamin Catouillard
+          |, j'ai 21 ans et je suis étudiant dans le domaine du développement web. 
+          | Je suis 
+          strong diplômé 
+          | du lycée Guy Mollet en services informatiques aux organisations et actuellement en troisième année de Bachelor Responsable de projets informatiques. 
+          strong Passionné par le développement web
+          | , je suis actuellement en alternance chez Boulanger en tant que développeur web.
+          br
+          br
+          | Étant 
+          strong persévérant,curieux,
+          | j'ai toujours envie d'apprendre et je ne m'arrête pas au premier problème.
+      div.column
+        img(src="" alt="Benjamin Catouillard")
