fix(index): fix syntax error -Fix Hero Interval -Fix syntaxic error -Hero takes now all of the height

--- a/public/sass/includes/_header.scss
+++ b/public/sass/includes/_header.scss
@@ -1,8 +1,12 @@
 .hero{
-    align-items: center;
-    text-align: center;
+    height: 100vh;
 
     &-body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
         .container{
            .title, .subtitle{
                 color: $color-white;
