style(text): Strong text wasn't visible

--- a/public/sass/includes/_about.scss
+++ b/public/sass/includes/_about.scss
@@ -20,7 +20,7 @@
                     text-align: left;
 
                     strong{
-                        color: $color-white;
+                        color: $color-white!important;
                     }
                 }
             }
