fix(semantique): Fix semantical use of strong

--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -14,14 +14,14 @@ section.section.about__root
           strong Benjamin Catouillard
           |, j'ai 21 ans et je suis étudiant dans le domaine du développement web. 
           | Je suis 
-          strong diplômé 
+          b diplômé 
           | du lycée Guy Mollet en services informatiques aux organisations et actuellement en troisième année de Bachelor Responsable de projets informatiques. 
-          strong Passionné par le développement web
+          b Passionné par le développement web
           |, je suis actuellement en alternance chez Boulanger en tant que développeur web.
           br
           br
           | Étant 
-          strong persévérant, curieux, 
+          b persévérant, curieux, 
           | j'ai toujours envie d'apprendre et je ne m'arrête pas au premier problème.
       div.column
         img(src="" alt="Benjamin Catouillard")
