fix(link): fix rel external link

--- a/views/default.pug
+++ b/views/default.pug
@@ -41,13 +41,13 @@ html(lang="fr")
       div.container
         div.footer__container__content.columns.is-mobile
           div.column.has-text-centered
-            a(href="https://www.linkedin.com/in/bcatouillard/" target="_blank")
+            a(href="https://www.linkedin.com/in/bcatouillard/" target="_blank" title="Lien vers LinkedIn" rel="noreferrer noopener")
               span.icon.fa-2x
                 i.fab.fa-linkedin-in.is-large(aria-hidden="true")
           div.column.has-text-centered.only-desk
             p Tous droits réservés - Benjamin Catouillard
           div.column.has-text-centered
-            a(href="https://www.github.com/bcatouillard" target="_blank")
+            a(href="https://www.github.com/bcatouillard" target="_blank" title="Lien vers Github" rel="noreferrer noopener")
               span.icon.fa-2x
                 i.fab.fa-github.is-large(aria-hidden="true")
 
