feat(index): Add photo

--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -24,4 +24,4 @@ section.section.about__root
           b persévérant, curieux, 
           | j'ai toujours envie d'apprendre et je ne m'arrête pas au premier problème.
       div.column
-        img(src="" alt="Benjamin Catouillard")
+        img(src="images/benjamin.jpg" alt="Benjamin Catouillard")
