--- a/views/default.pug
+++ b/views/default.pug
@@ -21,6 +21,8 @@ html(lang="fr")
     
       div#navMenu.navbar-menu
         div.navbar-start
+          a.navbar-item(href="#about")
+            | A propos
           a.navbar-item(href="#formation")
             | Formation
           a.navbar-item(href="#skills")
@@ -32,7 +34,10 @@ html(lang="fr")
           a.navbar-item(href="#contact")
             | Contact
 
-            
+    ul.return-top#toTop
+      li
+        a(href="#home").icon.fa-2x
+          i.far.fa-arrow-alt-circle-up.is-large(aria-hidden="true")
 
     include includes/index.pug
 
@@ -53,4 +58,5 @@ html(lang="fr")
 
     script(src="js/navbar.js")
     script(src="js/showHero.js")
+    script(src="js/to_top.js")
     script(defer src="assets/@fortawesome/fontawesome-free/js/all.min.js")
