--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -5,7 +5,7 @@ section.section.hero#home
       h2.subtitle#heroSubtitle 
 
 
-section.section.about__root
+section.section.about__root#about
   div.container.about__container
     h2.title.is-3 A propos de moi 
     div.columns.about__columns
@@ -23,5 +23,12 @@ section.section.about__root
           | Étant 
           b persévérant, curieux, 
           | j'ai toujours envie d'apprendre et je ne m'arrête pas au premier problème.
+          | Je suis donc à la 
+          strong recherche d'une alternance de 24 mois 
+          | dans le 
+          strong développement web 
+          | afin de pouvoir continuer pour obtenir un 
+          b Bac+5
+          |.
       div.column
         img(src="images/benjamin.jpg" alt="Benjamin Catouillard")
