perf: Some optimizations -Fix robots.txt -Improve image format

--- a/views/default.pug
+++ b/views/default.pug
@@ -36,7 +36,7 @@ html(lang="fr")
 
     ul.return-top#toTop
       li
-        a(href="#home").icon.fa-2x
+        a(href="#home" title="Retourner en haut").icon.fa-2x
           i.far.fa-arrow-alt-circle-up.is-large(aria-hidden="true")
 
     include includes/index.pug
