--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -31,4 +31,4 @@ section.section.about__root#about
           b Bac+5
           |.
       div.column
-        img(src="images/benjamin.jpg" alt="Benjamin Catouillard")
+        img(src="images/benjamin.webp" alt="Benjamin Catouillard")
