--- a/public/sass/includes/_about.scss
+++ b/public/sass/includes/_about.scss
@@ -23,6 +23,10 @@
                         color: $color-white!important;
                     }
                 }
+
+                img{
+                    transform: rotate(90deg);
+                }
             }
         }
     }
