feat(contact): Add Contact Form -Add Contact Form -Fix showHero Speed -Fix some css trouble with img -Include contact template into default -Fix toTop on mobile

--- a/views/default.pug
+++ b/views/default.pug
@@ -41,7 +41,14 @@ html(lang="fr")
 
     include includes/index.pug
 
-    
+
+
+
+
+
+
+    include includes/contact.pug
+
     footer.footer
       div.container
         div.footer__container__content.columns.is-mobile
