--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -27,7 +27,7 @@ section.section.about__root#about
           strong recherche d'une alternance de 24 mois 
           | dans le 
           strong développement web 
-          | afin de pouvoir continuer pour obtenir un 
+          | afin de pouvoir continuer mes études et ainsi obtenir un 
           b Bac+5
           |.
       div.column
