--- a/public/sass/includes/_about.scss
+++ b/public/sass/includes/_about.scss
@@ -4,6 +4,17 @@
         justify-content: center;
         align-items: center;
         flex-direction: column-reverse;
+
+        .column{
+
+            &:last-child{
+                margin: 30px;
+            }
+
+            img{
+                transform: rotate(90deg);
+            }
+        }
     }
 }
 
@@ -15,6 +26,11 @@
             text-align: center;
 
             .column{
+
+                &:last-child{
+                    margin: unset;
+                }
+
                 p{
                     color: $color-white;
                     text-align: left;
@@ -22,10 +38,6 @@
                     strong{
                         color: $color-white!important;
                     }
-                }
-
-                img{
-                    transform: rotate(90deg);
                 }
             }
         }
