--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -7,4 +7,5 @@
 @import "includes/footer";
 @import "includes/header";
 @import "includes/about";
+@import "includes/projects";
 @import "includes/contact";
