--- a/views/includes/projects.pug
+++ b/views/includes/projects.pug
@@ -1,5 +1,11 @@
-extends default
-
-block content
-    section.section#section
-        div.container
+section.section.projects__root#projects
+    div.container.projects__container
+        h2.title.is-3 Mes projets :
+            ul.projects__container__list
+                li.projects__item.card
+                    img.card-image.image-is-4by3.projects__illu(src="" alt="Illustration du projet")
+                    div.card-content
+                        p.projects__title Lorem ipsum
+                    div.projects__item--description
+                        p.projects__item--text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                        a.button(href="" target="_blank" title="Lien vers le projet sur Github")
