--- a/public/sass/_common.scss
+++ b/public/sass/_common.scss
@@ -10,6 +10,9 @@ html{
 
     section{
         min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
