--- a/public/sass/includes/_projects.scss
+++ b/public/sass/includes/_projects.scss
@@ -11,16 +11,36 @@
     }
 
     &__item{
-        color: $color-header;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: $color-header;
+        color: $color-white;
+        width: 64%;
+        margin: 0 auto;
+        margin-bottom: 30px;
+
+        &__illu{
+            width: 100%;
+        }
 
         &--text{
-            color: $color-header !important;
+            font-size: 18px;
+            text-align: center;
+            margin-bottom: 20px;
         }
     }
 
     &__title{
-        color: $color-header !important;
         text-align: center;
+    }
+}
+
+.content{
+    div{
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -30,18 +50,14 @@
 
             &__list{
                 flex-flow: row wrap;
+                justify-content: space-between;
+                width: 1128px;
             }
         }
 
         &__item{
-
-            &--description{
-                display: none;
-
-                &:hover{
-                    
-                }
-            }
+            width: 25%;
+            margin: 20px;
         }
     }
 }
