fix(projects): Fix accessibility trouble with button

--- a/views/includes/projects.pug
+++ b/views/includes/projects.pug
@@ -12,4 +12,4 @@ section.section.projects__root#projects
                         div.content
                             p.projects__item--text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
                             div
-                                a.button.is-link.is-outlined(href="" target="_blank" title="Lien vers le projet sur Github") Découvrir
+                                a.button.is-primary.is-outlined(href="" target="_blank" title="Lien vers le projet sur Github") Découvrir
