feat(skills.pug): Feat skills and style -Add skills -Add content -Add style to project

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -7,5 +7,6 @@
 @import "includes/footer";
 @import "includes/header";
 @import "includes/about";
+@import "includes/skills";
 @import "includes/projects";
 @import "includes/contact";
