--- a/views/includes/skills.pug
+++ b/views/includes/skills.pug
@@ -1,5 +1,61 @@
-extends default
-
-block content
-    section.section#skills
-        div.container
+section.section.skills__root#skills
+    div.container.skills__container
+        h2.title.is-3 Mes compétences :
+        div.skills__container__before
+            div.skills__container__list
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fab.fa-html5.is-large(aria-hidden="true" alt="Icone HTML")
+                        p HTML
+                    div.skills__item--hover
+                        p Je sais faire une page HTML.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fab.fa-sass.is-large(aria-hidden="true" alt="Icone SASS")
+                        p SASS
+                    div.skills__item--hover
+                        p Je préfère le SASS au CSS qui est pour moi plus facile.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fas.fa-code.is-large(aria-hidden="true" alt="Icone Javascript")
+                        p Javascript
+                    div.skills__item--hover
+                        p J'utilise ES6 au niveau syntaxe. Je sais me servir de NodeJS ou encore React.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fas.fa-database.is-large(aria-hidden="true" alt="Icone SQL")
+                        p SQL
+                    div.skills__item--hover
+                        p Je sais modéliser une base de données, ainsi que faire des requêtes SQL afin d'exporter des données.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fas.fa-mobile-alt.is-large(aria-hidden="true" alt="Icone Responsive Web Design")
+                        p Responsive Design
+                    div.skills__item--hover
+                        p J'ai appris à faire du responsive design en allant chez Boulanger Location où l'on m'a aidé à penser Mobile-First.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.far.fa-eye.is-large(aria-hidden="true" alt="Icone SEO")
+                        p SEO
+                    div.skills__item--hover
+                        p J'ai appris à faire du responsive design en allant chez Boulanger Location où l'on m'a aidé à penser Mobile-First.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fab.fa-adobe.is-large(aria-hidden="true" alt="Icone Adobe")
+                        p Adobe Photoshop - XD
+                    div.skills__item--hover
+                        p Je sais faire des données structurées ou mettre en pratique les bonnes pratiques SEO.
+                div.skills__item
+                    div.skills__item--visible
+                        span.icon.fa-2x
+                            i.fas.fa-server.is-large(aria-hidden="true" alt="Icone PHP - Symfony")
+                        p PHP - Symfony
+                    div.skills__item--hover
+                        p J'ai appris à faire de la programmation orientée objet avec Php et j'ai appris également à utiliser Symfony.
