feat(projects): Add projects view -Add project view -Add projects add view -Style -Routes

--- a/views/includes/contact.pug
+++ b/views/includes/contact.pug
@@ -14,7 +14,7 @@ section.section.contact__root#contact
                 div.field
                     label.label(for="email") Email :
                     div.control.has-icons-left
-                        input.input#email(type="text" placeholder="Email :" required)
+                        input.input#email(type="email" placeholder="Email :" required)
                         span.icon.is-small.is-left
                             i.fas.fa-envelope
                 div.field
