--- a/views/admin.pug
+++ b/views/admin.pug
@@ -17,7 +17,7 @@ html(lang="fr")
                 form.login__root
                     div.field
                         div.control
-                            input.input#email(type="text" placeholder="Email :" required)
+                            input.input#email(type="email" placeholder="Email :" required)
                     div.field
                         div.control
                             input.input#password(type="password" placeholder="Password :" required)
