fix(skills:) Fix skills text

--- a/views/includes/skills.pug
+++ b/views/includes/skills.pug
@@ -44,14 +44,14 @@ section.section.skills__root#skills
                             i.far.fa-eye.is-large(aria-hidden="true" alt="Icone SEO")
                         p SEO
                     div.skills__item--hover
-                        p J'ai appris à faire du responsive design en allant chez Boulanger Location où l'on m'a aidé à penser Mobile-First.
+                        p Je sais faire des données structurées ou mettre en pratique les bonnes pratiques SEO.
                 div.skills__item
                     div.skills__item--visible
                         span.icon.fa-2x
                             i.fab.fa-adobe.is-large(aria-hidden="true" alt="Icone Adobe")
                         p Adobe Photoshop - XD
                     div.skills__item--hover
-                        p Je sais faire des données structurées ou mettre en pratique les bonnes pratiques SEO.
+                        p J'ai appris à me servir de Photoshop et de XD chez Boulanger
                 div.skills__item
                     div.skills__item--visible
                         span.icon.fa-2x
