feat(contact): Handle Contact Form

--- a/views/default.pug
+++ b/views/default.pug
@@ -62,4 +62,7 @@ html(lang="fr")
     script(src="js/navbar.js")
     script(src="js/showHero.js")
     script(src="js/to_top.js")
+    if anchor
+      script
+        window.onload = window.location.hash = '#{anchor}';
     script(defer src="assets/@fortawesome/fontawesome-free/js/all.min.js")
