--- a/views/includes/contact.pug
+++ b/views/includes/contact.pug
@@ -1,33 +1,40 @@
 section.section.contact__root#contact
     div.container.contact__container
         h2.title.is-3 Contactez moi !
+        if  message == true
+            div.notification.is-primary
+                | Le message a été envoyé avec succès !
+        else if message == false
+            div.notification.is-danger
+                | Le message n'a pas pu être envoyé...
+
         div.form__root
-            form.form__container
+            form.form__container(method="post" action="/#contact")
                 div.field
                     label.label(for="name") Nom :
                     div.control
-                        input.input#name(type="text" placeholder="Nom :" required)
+                        input.input(type="text" name="inputName" placeholder="Nom :" required)
                 div.field
                     label.label(for="firstName") Prénom :
                     div.control
-                        input.input#firstName(type="text" placeholder="Prénom :" required)
+                        input.input(type="text" name="inputFirstName" placeholder="Prénom :" required)
                 div.field
                     label.label(for="email") Email :
                     div.control.has-icons-left
-                        input.input#email(type="email" placeholder="Email :" required)
+                        input.input(type="email" name="inputEmail" placeholder="Email :" required)
                         span.icon.is-small.is-left
                             i.fas.fa-envelope
                 div.field
                     label.label(for="subject") Sujet :
                     div.control
-                        input.input#subject(type="text" placeholder="Sujet :" required)
+                        input.input(type="text" name="inputSubject" placeholder="Sujet :" required)
                 div.field
                     label.label(for="bodyMail") Message :
                     div.control
-                        textarea.textarea#bodyMail(cols="20", rows="3",placeholder="Votre message :" required)
+                        textarea.textarea(cols="20", rows="3",name="inputBodyMail" placeholder="Votre message :" required)
                 div.field.is-grouped
                     div.control
-                        button.button.is-link Envoyer
+                        button.button.is-link(type="submit") Envoyer
                     div.control
                         button.button.is-link
                             span.icon.is-small
