feat(contact): Add Captcha

--- a/views/default.pug
+++ b/views/default.pug
@@ -66,3 +66,4 @@ html(lang="fr")
       script
         window.onload = window.location.hash = '#{anchor}';
     script(defer src="assets/@fortawesome/fontawesome-free/js/all.min.js")
+    script(src='https://www.google.com/recaptcha/api.js')  
