--- a/views/includes/contact.pug
+++ b/views/includes/contact.pug
@@ -32,6 +32,8 @@ section.section.contact__root#contact
                     label.label(for="bodyMail") Message :
                     div.control
                         textarea.textarea(cols="20", rows="3",name="inputBodyMail" placeholder="Votre message :" required)
+                div.field
+                    div.g-recaptcha(data-sitekey="6Le1h4cUAAAAAMSPt_r_q71DGOcy8OUTB2xN4O5l")
                 div.field.is-grouped
                     div.control
                         button.button.is-link(type="submit") Envoyer
