--- a/views/includes/projects.pug
+++ b/views/includes/projects.pug
@@ -3,13 +3,28 @@ section.section.projects__root#projects
         h2.title.is-3 Mes projets :
         ul.projects__container__list
             li.projects__item
-                div.projects__item__illu.card-image
-                    figure.image.is-4by3
-                        img(src="images/projects/default.png" alt="Illustration du projet")
                 div.card-content
                     div.title.is-4
-                        p.projects__title Lorem ipsum
+                        p.projects__title Gestion de configurations
                     div.content
-                        p.projects__item--text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                        p.projects__item--text Projet de gestion de configurations en utilisant Ansible. Des scripts ont été utiliser pour récupérer les informations en base et les envoyer à Ansible
                         div
-                            a.button.is-primary.is-outlined(href="" target="_blank" title="Lien vers le projet sur Github") Découvrir
+                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/Ansiscripts" target="_blank" title="Lien vers le projet sur Github") Découvrir
+
+            li.projects__item
+                div.card-content
+                    div.title.is-4
+                        p.projects__title Plein La Bouche
+                    div.content
+                        p.projects__item--text Développement d'un site web vitrine présentant les prestations d'une auto entrepreneuse dans le domaine de la restauration.
+                        div
+                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/PleinLaBouche" target="_blank" title="Lien vers le projet sur Github") Découvrir
+
+            li.projects__item
+                div.card-content
+                    div.title.is-4
+                        p.projects__title AhnacSoluctions
+                    div.content
+                        p.projects__item--text Développement d'une UWP App récupérant les données d'une API et les envoyant sous forme de notifications pour les utilisateurs de l'intranet.
+                        div
+                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/AhnacSolutions" target="_blank" title="Lien vers le projet sur Github") Découvrir
