--- a/views/includes/projects.pug
+++ b/views/includes/projects.pug
@@ -9,7 +9,7 @@ section.section.projects__root#projects
                     div.content
                         p.projects__item--text Projet de gestion de configurations en utilisant Ansible. Des scripts ont été utiliser pour récupérer les informations en base et les envoyer à Ansible
                         div
-                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/Ansiscripts" target="_blank" title="Lien vers le projet sur Github") Découvrir
+                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/Ansiscripts" rel="noreferrer noopener" target="_blank" title="Lien vers le projet sur Github") Découvrir
 
             li.projects__item
                 div.card-content
@@ -18,7 +18,7 @@ section.section.projects__root#projects
                     div.content
                         p.projects__item--text Développement d'un site web vitrine présentant les prestations d'une auto entrepreneuse dans le domaine de la restauration.
                         div
-                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/PleinLaBouche" target="_blank" title="Lien vers le projet sur Github") Découvrir
+                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/PleinLaBouche" rel="noreferrer noopener"  target="_blank" title="Lien vers le projet sur Github") Découvrir
 
             li.projects__item
                 div.card-content
@@ -27,4 +27,4 @@ section.section.projects__root#projects
                     div.content
                         p.projects__item--text Développement d'une UWP App récupérant les données d'une API et les envoyant sous forme de notifications pour les utilisateurs de l'intranet.
                         div
-                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/AhnacSolutions" target="_blank" title="Lien vers le projet sur Github") Découvrir
+                            a.button.is-primary.is-outlined(href="https://github.com/bcatouillard/AhnacSolutions" rel="noreferrer noopener" target="_blank" title="Lien vers le projet sur Github") Découvrir
