--- a/views/default.pug
+++ b/views/default.pug
@@ -79,3 +79,10 @@ html(lang="fr")
         "description": "Bienvenue sur le portfolio de Benjamin Catouillard"
       }
 
+    script(async src="https://www.googletagmanager.com/gtag/js?id=UA-158991636-1")
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-158991636-1');
+
