doc(index): Update intro text

--- a/views/includes/index.pug
+++ b/views/includes/index.pug
@@ -15,20 +15,11 @@ section.section.about__root#about
           |, j'ai 21 ans et je suis étudiant dans le domaine du développement web. 
           | Je suis 
           b diplômé 
-          | du lycée Guy Mollet en services informatiques aux organisations et actuellement en troisième année de Bachelor Responsable de projets informatiques. 
-          b Passionné par le développement web
-          |, je suis actuellement en alternance chez Boulanger en tant que développeur web.
+          | d'un titre RNCP de niveau 2 : Responsable de Projets Informatiques d'Enigma School et actuellement en 4ème année chez Enigma School. 
           br
           br
-          | Étant 
-          b persévérant, curieux, 
-          | j'ai toujours envie d'apprendre et je ne m'arrête pas au premier problème.
-          | Je suis donc à la 
-          strong recherche d'une alternance de 24 mois 
-          | dans le 
-          strong développement web 
-          | afin de pouvoir continuer mes études et ainsi obtenir un 
-          b Bac+5
-          |.
+          b Passionné par le développement
+          |, je suis actuellement en alternance chez IBM en tant que Analyste Système et DevOps.
+          br
       div.column
         img(src="images/benjamin.webp" alt="Benjamin Catouillard")
