fix(security): Fix security alert -Fix security alert -Fix card size on mobile -Fix fontawesome icon on skills -Update dependencies

--- a/views/includes/skills.pug
+++ b/views/includes/skills.pug
@@ -48,7 +48,7 @@ section.section.skills__root#skills
                 div.skills__item
                     div.skills__item--visible
                         span.icon.fa-2x
-                            i.fab.fa-adobe.is-large(aria-hidden="true" alt="Icone Adobe")
+                            i.fas.fa-layer-group.is-large(aria-hidden="true" alt="Icone Adobe")
                         p Adobe Photoshop - XD
                     div.skills__item--hover
                         p J'ai appris à me servir de Photoshop et de XD chez Boulanger
