--- a/src/views/includes/index.pug
+++ b/src/views/includes/index.pug
@@ -12,14 +12,14 @@ section.section.about__root#about
       div.column
         p.about__text Je suis 
           strong Benjamin Catouillard
-          |, j'ai 21 ans et je suis étudiant dans le domaine du développement web. 
+          |, j'ai 22 ans et je suis étudiant dans le domaine du développement web. 
           | Je suis 
           b diplômé 
-          | d'un titre RNCP de niveau 2 : Responsable de Projets Informatiques d'Enigma School et actuellement en 4ème année chez Enigma School. 
+          | d'un titre RNCP de niveau 2 : Responsable de Projets Informatiques d'Enigma School et actuellement en 5ème année chez Enigma School. 
           br
           br
           b Passionné par le développement
-          |, je suis actuellement en alternance chez IBM en tant que Analyste Système et DevOps.
+          |, je suis actuellement en alternance chez Kyndryl en tant que Analyste Système et DevOps.
           br
       div.column
         img(src="images/benjamin.webp" alt="Benjamin Catouillard")
